// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds like views fetches post likes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "likes": Array [
    Object {
      "actor": Object {
        "did": "user(0)",
        "handle": "eve.test",
        "labels": Array [],
        "viewer": Object {},
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "did": "user(1)",
        "handle": "dan.test",
        "labels": Array [],
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "followedBy": "record(3)",
          "following": "record(2)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
        "description": "hi im bob",
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(0)",
}
`;

exports[`pds like views fetches reply likes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "likes": Array [
    Object {
      "actor": Object {
        "did": "user(0)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "uri": "record(0)",
}
`;
